# ISWII-sellControl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello_world.py  main.py  offer.json  pyproject.toml  requirements.txt
.github/workflows/: helloworld.yml  tests.yml
backend/: Landing.py  app.py  config.py  connect.py  hello_world.py  main.py  user.py  verificator.py
backend/DAO/: client.py  clientDAO.py  deliveryNote.py  deliveryNoteDAO.py  employe.py  employeDAO.py  invoice.py  invoiceDAO.py  ofert.py  ofertDAO.py  offer.py  offerDAO.py  order.py  orderDAO.py  product.py  productDAO.py
backend/pdf/: deliveryNotePDF.py  invoicePDF.py  offerPDF.py  orderPDF.py
backend/routers/: DeliveryNote  client.py  deliveryNote.py  invoice.py  offer.py  order.py  product.py  user.py
backend/tests/: client_test.py  delivery_note_test.py  invoice_test.py  offer_test.py  order_test.py  product_test.py  user_test.py
db/: sellcontrol.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.css  Navbar.tsx  ProtectedRoutes.tsx
frontend/src/pages/: Administrator.css  Administrator.tsx  Client.css  Client.tsx  DeliveryNote.css  DeliveryNote.tsx  Home.css  Home.tsx  Invoice.css  Invoice.tsx  Landing.css  Landing.tsx  NotFound.css  NotFound.tsx  Offer.css  Offer.tsx  Order.css  Order.tsx  Product.css  Product.tsx
frontend/src/pages/offer/: CreateOffer.css  CreateOffer.tsx  EditOffer.css  EditOffer.tsx  Offer.css  Offer.tsx
