[project]
name = "iswii-incluirtitulo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.39.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "types-pyjwt>=1.7.1",
    "uvicorn>=0.34.0",
]
